[package]
name = "kmon"
version = "1.6.3"
description = "Linux kernel manager and activity monitor"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
documentation = "https://github.com/orhun/kmon/blob/master/README.md"
homepage = "https://kmon.cli.rs"
repository = "https://github.com/orhun/kmon"
keywords = ["linux", "kernel", "module", "activity", "monitor"]
categories = ["command-line-utilities", "os"]
include = ["src/**/*", "Cargo.*", "LICENSE", "README.md", "CHANGELOG.md"]
edition = "2021"

[dependencies]
tui = { package = "ratatui", version = "0.20.1", default-features = false, features = ["termion"] }
termion = "2.0.1"
bytesize = "1.2.0"
unicode-width = "0.1.10"
colorsys = "0.6.7"
enum-iterator = "1.4.1"
clap = "4.3.1"
copypasta-ext = "0.4.4"

[build-dependencies]
clap_mangen = "0.2.12"
clap_complete = "4.3.1"
clap = "4.3.1"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
