[package]
name = "kmon"
version = "1.7.0"
description = "Linux kernel manager and activity monitor"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
documentation = "https://github.com/orhun/kmon/blob/master/README.md"
homepage = "https://kmon.cli.rs"
repository = "https://github.com/orhun/kmon"
keywords = ["linux", "kernel", "module", "activity", "monitor"]
categories = ["command-line-utilities", "os"]
include = ["src/**/*", "Cargo.*", "LICENSE", "README.md", "CHANGELOG.md"]
edition = "2021"

[dependencies]
ratatui = { version = "0.29.0", default-features = false, features = [
  "termion",
] }
termion = "4.0.3"
bytesize = "1.3.0"
unicode-width = "0.1.14"
colorsys = "0.6.7"
enum-iterator = "2.1.0"
clap = "4.5.23"
copypasta-ext = "0.4.4"
regex = "1.11.1"

[build-dependencies]
clap_mangen = "0.2.24"
clap_complete = "4.5.38"
clap = "4.5.23"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
